2007-01-15  Ales Hakl  <ales at hakl dot net>

	* dfsch/wrapper.h, dfsch/strings.h: added extern "C" for C++

	* src/parse.c (dispatch_string): unicode escapes

	* src/strings.c (escape_table): excape NUL as \x00 and not \0

	* src/parse.c (dispatch_string): simplified hex byte-escape handling
	(dispatch_string): full octal escapes

2007-01-14  Ales Hakl  <ales at hakl dot net>

	* src/strings.c (string_write): removed redundant hexadecimal table.

2007-01-03  Ales Hakl  <ales at hakl dot net>

	* scm/test.scm (test): use when form

2006-12-31  Ales Hakl  <ales at hakl dot net>

	* scm/test.scm: Structured tests

	* src/repl.c: write function

2006-12-08  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_try): finally support

2006-11-24  Ales Hakl  <ales at hakl dot net>

	* src/parse.c (parse_close): check that given state is valid for
	close paren.

2006-11-12  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_make_symbol): moved symbol table initialization 
	here.
	(gsh_check_init): removed locking and other unnecessary code
	(dfsch_eval_impl): propagate thread_info_t when recursing to self
	(eval_list): use dfsch_eval_impl instead of dfsch_eval
	(dfsch_eval_impl): propagate thread_info to eval_list

2006-11-11  Ales Hakl  <ales at hakl dot net>

	* src/hash.c (dfsch_hash_set): Synchronization of hash modifications

2006-11-05  Ales Hakl  <ales at hakl dot net>

	* src/hash.c (get_hash): Default hash function for all objects

2006-11-04  Ales Hakl  <ales at hakl dot net>

	* *: Removed concept of interpreter context

	* src/repl.c (main): -L option

	* lib/load.c (dfsch_load_scm): Searching for source files.

2006-10-26  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_try): restore continuation stack.
	(dfsch_try): removed unnecesary casts

2006-10-24  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_try): invalidate inner continuations
	Removed all occurencies of "volatile" (it's unnecessary)
